@@ -2,13 +2,17 @@ package de.erethon.questsxl.livingworld;
 
 import de.erethon.questsxl.QuestsXL;
 import de.erethon.questsxl.action.QAction;
+import de.erethon.questsxl.common.QLineConfig;
 import de.erethon.questsxl.common.QTranslatable;
 import de.erethon.questsxl.error.FriendlyError;
+import de.erethon.questsxl.livingworld.explorables.LootChest;
 import de.erethon.questsxl.player.QPlayer;
 import net.kyori.adventure.text.Component;
+import org.bukkit.Bukkit;
 import org.bukkit.Location;
 import org.bukkit.Sound;
 
+import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
@@ -25,8 +29,8 @@ public final class ExplorationSet {
     private final String id;
     private ExplorationSet parent;
     private Set<ExplorationSet> children = new HashSet<>();
-    private final QTranslatable displayName;
-    private final QTranslatable description;
+    private QTranslatable displayName;
+    private QTranslatable description;
     private final List<Explorable> entries;
     private Location averageLocation;
 
@@ -37,7 +41,7 @@ public final class ExplorationSet {
         this.parent = null;
         this.displayName = new QTranslatable("qxl.explorationset." + id + ".name", new HashMap<>());
         this.description = new QTranslatable("qxl.explorationset." + id + ".description", new HashMap<>());
-        this.entries = List.of();
+        this.entries = new ArrayList<>();
     }
 
     public ExplorationSet(String id, ExplorationSet parent, QTranslatable displayName, QTranslatable description, List<Explorable> entries) {
@@ -60,6 +64,14 @@ public final class ExplorationSet {
         return description;
     }
 
+    public void setDisplayName(QTranslatable displayName) {
+        this.displayName = displayName;
+    }
+
+    public void setDescription(QTranslatable description) {
+        this.description = description;
+    }
+
     public List<Explorable> entries() {
         return entries;
     }
@@ -71,6 +83,12 @@ public final class ExplorationSet {
     }
 
     public Location averageLocation() {
+        if (averageLocation == null && !entries.isEmpty()) {
+            recalculateAverageLocation();
+        }
+        if (averageLocation == null) {
+            return new Location(Bukkit.getWorlds().getFirst(), 0, 0, 0);
+        }
         return averageLocation;
     }
 
@@ -123,8 +141,16 @@ public final class ExplorationSet {
         return Math.sqrt(distance);
     }
 
+    /**
+     * Gets an explorable by its ID from this set
+     */
     public Explorable getExplorable(String id) {
-        return entries.stream().filter(e -> e.id().equals(id)).findFirst().orElse(null);
+        for (Explorable explorable : entries) {
+            if (explorable.id().equals(id)) {
+                return explorable;
+            }
+        }
+        return null;
     }
 
     public void addExplorable(Explorable explorable) {
@@ -174,6 +200,10 @@ public final class ExplorationSet {
      * Used for speeding up the process of finding the nearest Explorable to a player.
      */
     public void recalculateAverageLocation() {
+        if (entries.isEmpty()) {
+            averageLocation = null;
+            return;
+        }
         double x = 0;
         double y = 0;
         double z = 0;
@@ -186,7 +216,60 @@ public final class ExplorationSet {
         x /= entries.size();
         y /= entries.size();
         z /= entries.size();
-        averageLocation = new Location(entries.getFirst().location().getWorld(), x, y, z);
+        averageLocation = new Location(entries.get(0).location().getWorld(), x, y, z);
     }
 
+    public Set<ExplorationSet> getChildren() {
+        return new HashSet<>(children);
+    }
+
+    public static ExplorationSet fromQLineConfig(QLineConfig section) {
+        try {
+            String id = section.getName();
+            QTranslatable displayName = QTranslatable.fromString(section.getString("displayName", "qxl.explorationset." + id + ".name"));
+            QTranslatable description = QTranslatable.fromString(section.getString("description", "qxl.explorationset." + id + ".description"));
+
+            // Create the set first without parent/children to avoid circular dependencies
+            ExplorationSet set = new ExplorationSet(id, null, displayName, description, new ArrayList<>());
+
+            return set;
+        } catch (Exception e) {
+            FriendlyError error = new FriendlyError("ExplorationSet" + section.getName(), "Error while parsing from QLineConfig", e.getMessage(), "Check the configuration for errors");
+            error.addStacktrace(e.getStackTrace());
+            QuestsXL.get().addRuntimeError(error);
+            return null;
+        }
+    }
+
+    public QLineConfig toQLineConfig() {
+        QLineConfig cfg = new QLineConfig();
+        cfg.setName(id); // Set the ID as the name
+        try {
+            cfg.set("displayName", displayName.toString());
+            cfg.set("description", description.toString());
+            cfg.set("parentSet", parent != null ? parent.id() : "");
+
+            if (children != null && !children.isEmpty()) {
+                List<String> childIds = children.stream().map(ExplorationSet::id).toList();
+                cfg.set("childSets", childIds.toArray(new String[0]));
+            }
+
+            if (!rewardActions.isEmpty()) {
+                for (Map.Entry<Integer, List<QAction>> entry : rewardActions.entrySet()) {
+                    // Lets ignore this for now
+                }
+            }
+
+        } catch (Exception e) {
+            FriendlyError error = new FriendlyError("ExplorationSet" + id, "Error while saving to QLineConfig", e.getMessage(), "...");
+            error.addStacktrace(e.getStackTrace());
+            QuestsXL.get().addRuntimeError(error);
+        }
+        return cfg;
+    }
+
+    public void removeExplorable(Explorable lootChest) {
+        entries.remove(lootChest);
+        recalculateAverageLocation();
+    }
 }
